--- a/src/index.html
+++ b/src/index.html
@@ -20,23 +20,17 @@
   </head>
   <body>
     <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">YuNo</a>
+        <div class="navbar">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">YuNo</a>
+          </div>
         </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#/start">Start</a></li>
-            <li><a href="#/price">Prijs</a></li>
-            <li><a href="#contact">Questions</a></li>
-            <li><a href="#contact">Cadeau</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
 
         <div ng-view>
       </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="lib/jquery/js/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
 
