--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,11 @@
     <title>YuNo</title>
 
     <!-- Bootstrap -->
-    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <link href="lib/jquery-ui/css/ui-lightness/jquery-ui-1.9.2.custom.css" rel="stylesheet">
 
-    <!-- build:css css/yuno.js -->
+    <!-- build:css css/yuno.css -->
     <link href="css/style.css" rel="stylesheet">
     <!-- /build -->
 
@@ -49,8 +49,8 @@
 
     <script src="lib/jquery-ui-touch-punch/jquery.ui.touch-punch.js"></script>
     
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="lib/bootstrap/js/bootstrap.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed 
+    <script src="lib/bootstrap/js/bootstrap.js"></script> -->
 
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular/angular-route.js"></script>
