--- a/www/index.html
+++ b/www/index.html
@@ -11,11 +11,11 @@
     <title>YuNo</title>
 
     <!-- Bootstrap -->
-    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <link href="lib/jquery-ui/css/ui-lightness/jquery-ui-1.9.2.custom.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/yuno.js">
+    <link rel="stylesheet" href="css/yuno.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -47,8 +47,8 @@
 
     <script src="lib/jquery-ui-touch-punch/jquery.ui.touch-punch.js"></script>
     
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="lib/bootstrap/js/bootstrap.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed 
+    <script src="lib/bootstrap/js/bootstrap.js"></script> -->
 
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular/angular-route.js"></script>
