--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
 
     <meta name="format-detection" content="telephone=no" />
     <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-    <meta name="viewport" content="user-scalable=no, initial-scale=0.5, maximum-scale=0.5, minimum-scale=0.5, width=device-width, height=device-height, target-densitydpi=medium-dpi" />
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=medium-dpi" />
 
     <title>YuNo</title>
 
@@ -30,16 +30,14 @@
       <div class="container header">
         <div class="row row-header  ">
           <div class="col-xs-12 logo">
-            <img src="images/logo_yuno_moederdag.png" />
+            <img height="50" src="images/logo_yuno_moederdag.png" />
           </div>
         </div>
       </div>
     </div>
     <div class="container content">
-        
-
-        <div ng-view>
-      </div>
+      <div ng-view></div>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="lib/jquery/js/jquery.js"></script>
