Update first screen and import new data

--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,7 @@
     <script src="app/controllers/PriceController.js"></script>
     <script src="app/controllers/QuestionsController.js"></script>
     <script src="app/controllers/GiftsController.js"></script>
+    <script src="app/filters/GiftFilter.js"></script>
     <script src="app/services/YunoService.js"></script>
     <!-- /build -->
 
