Fix home button

--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
             <img height="50" src="images/logo_yuno_moederdag.png" />
           </div>
           <div class="col-xs-4 home">
-            <a class="btn btn-default btn-lg" href="/" >Home</a>
+            <a class="btn btn-default btn-lg" href="/#/start" >Home</a>
           </div>
         </div>
       </div>
