--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
             <img height="50" src="images/logo_yuno_moederdag.png" />
           </div>
           <div class="col-xs-4 home">
-            <a class="btn btn-default btn-lg" href="/index.html#/start" >Home</a>
+            <a class="btn btn-default btn-lg" href="index.html#/start" >Home</a>
           </div>
         </div>
       </div>
