Media query and swipe

--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,7 @@
 
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular/angular-route.js"></script>
+    <script src="lib/angular/angular-touch.js"></script>
 
     <!-- build:js app/yuno.js -->
     <script src="app/module.js"></script>
@@ -62,7 +63,6 @@
     <script src="app/controllers/PriceController.js"></script>
     <script src="app/controllers/QuestionsController.js"></script>
     <script src="app/controllers/GiftsController.js"></script>
-    <script src="app/filters/GiftFilter.js"></script>
     <script src="app/services/YunoService.js"></script>
     <!-- /build -->
 
