--- a/www/index.html
+++ b/www/index.html
@@ -53,6 +53,7 @@
 
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular/angular-route.js"></script>
+    <script src="lib/angular/angular-touch.js"></script>
 
     <script src="app/yuno.js"></script>
 
