small look and feel changes

--- a/www/index.html
+++ b/www/index.html
@@ -30,10 +30,12 @@
       <div class="container header">
         <div class="row row-header  ">
           <div class="col-xs-8 logo">
-            <img height="50" src="images/logo_yuno_moederdag.png" />
+            <img height="40px" src="images/logo_yuno_moederdag.png" />
           </div>
           <div class="col-xs-4 home">
-            <a class="btn btn-default btn-lg" href="index.html#/start" >Home</a>
+            <a class="btn" style="margin: 8px 0;" href="index.html#/start" >
+              <img height="40px" src="images/homeicon.png" />
+            </a>
           </div>
         </div>
       </div>
