naamvraag, nieuw algoritme, backbutton

--- a/src/index.html
+++ b/src/index.html
@@ -68,6 +68,9 @@
     <script src="app/services/YunoService.js"></script>
     <!-- /build -->
 
+    <script type="text/javascript" src="lib/SocialSharing/SocialSharing.js"></script>
+
+
     <script type="text/javascript" src="phonegap.js"></script>
     <script type="text/javascript">
       app.initialize();
