--- a/www/index.html
+++ b/www/index.html
@@ -59,6 +59,9 @@
 
     <script src="app/yuno.js"></script>
 
+    <script type="text/javascript" src="lib/SocialSharing/SocialSharing.js"></script>
+
+
     <script type="text/javascript" src="phonegap.js"></script>
     <script type="text/javascript">
       app.initialize();
