--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,9 @@
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-      <script type="text/javascript" src="cordova.js"></script>
+      <script type="text/javascript" src="phonegap.js"></script>
+
+      <script type="text/javascript" src="cordova/cordova.js"></script>
 
       <![endif]-->
   </head>
@@ -73,7 +75,6 @@
     <script type="text/javascript" src="lib/SocialSharing/SocialSharing.js"></script>
 
 
-    <script type="text/javascript" src="phonegap.js"></script>
     <script type="text/javascript">
       app.initialize();
     </script>
