--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
             <img height="40px" src="images/logo_yuno_moederdag.png" />
           </div>
           <div class="col-xs-4 home">
-            <a class="btn" style="margin: 8px 0;" href="index.html#/start" onclick="window.plugins.socialsharing.share('Message only')" >
+            <a class="btn" style="margin: 8px 0;" href="index.html#/start" onclick="$(window)[0].plugins.socialsharing.share('Message only')" >
               <img height="40px" src="images/homeicon.png" />
             </a>
           </div>
