--- a/www/index.html
+++ b/www/index.html
@@ -66,9 +66,9 @@
     <script type="text/javascript" src="lib/SocialSharing/SocialSharing.js"></script>
 
 
-    <!--<script type="text/javascript">-->
-      <!--app.initialize();-->
-    <!--</script>-->
+    <script type="text/javascript">
+      app.initialize();
+    </script>
 
   </body>
 </html>
